switching from main to v1 tag for build workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   image:
-    uses: edencehealth/workflows/.github/workflows/dockerimage.yml@main
+    uses: edencehealth/workflows/.github/workflows/dockerimage.yml@v1
     with:
       container_name: rcore
     secrets: inherit
